Fix main function: spacing, re-arrange search fields

--- a/aboveFold.css
+++ b/aboveFold.css
@@ -3,13 +3,17 @@
 }
 
 .clouds{
-    padding-top: 100px;
+    padding-top: 200px;
     width: 100%;
     align-content: center;
     padding-left: 30px;
     padding-right: 30px;
     padding-left: 30px;
     padding-right: 30px;
+}
+
+.aboveFold{
+    height: 100vh;
 }
 
 .smallClouds{
@@ -21,7 +25,6 @@
     box-shadow: 0 1px 10px 1px rgba(0,0,0,0.15);
     border-radius: 6px;
     margin: auto;
-    margin-top: -80px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -114,7 +117,22 @@
     margin: 0;
 }
 
+.gridHeaderRow2{
+    font-family: Verdana-Bold;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-align: justify;
+    margin: 0;
+    margin-top: 12px;
+}
+
 .mainFunctionRow1{
+    display: flex;
+    flex-direction:column;
+    margin-right: 32px;
+}
+
+.mainFunctionRow2{
     display: flex;
     flex-direction:column;
 }
@@ -471,7 +489,7 @@
         height: 100%;
         background-color: gray;
         justify-content: center;
-        margin-top: 40px;
+        margin-top: 50px;
         width: 100%;
     }
     
