--- a/header.css
+++ b/header.css
@@ -86,7 +86,7 @@
     max-height: 40px;
 }
 
-.headerHamburgerMenu{
+.hamburgerMenu{
     display: none;
 }
 
@@ -94,7 +94,7 @@
 
     .header{
         height: 100%;
-        max-height: 40px;
+        max-height: 50px;
         padding-top: 20px;
         padding-bottom: 20px;
         display: flex;
@@ -128,12 +128,51 @@
         display: none;
     }
 
-    .headerHamburgerMenu{
+    .hamburgerMenu{
         display: flex;
-        position: relative;
-        z-index: 100;
-        margin-right: 15px;
+        padding-right: 20px;
     }
+
+    .sidenav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        background-color: white;
+        overflow-x: hidden;
+        padding-top: 60px;
+        transition: 0.5s;
+    }
+
+    .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 18px;
+        color: #59097B;
+        display: block;
+        transition: 0.3s;
+    }
+
+    .sidenav .closebtn {
+        position: absolute;
+        top: -12px;
+        right: 12px;
+        font-size: 36px;
+        margin-left: 50px;
+        color: #E01171;
+    }
+
+    .spanHM{
+        font-size:30px;
+        cursor:pointer;
+    }
+
+    .hamburgerStyle {
+        color:#e01171;
+    }
+    
 
 
 }
